<resources>
    <string name="app_name">Adlam</string>
    <string name="menu">menu</string>

    <!-- Screen titles -->
    <string name="welcome_screen">Welcome screen</string>
    <string name="exercise_sessions">Exercise sessions</string>
    <string name="exercise_session_detail">Exercise session detail</string>
...
    <string name="sleep_session_detail">Sleep session detail</string>
    <string name="differential_changes">Changes</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="input_readings">Record weight</string>


    <string name="alphabet">Alphabet</string>
    <string name="writing">Writing</string>
    <string name="Exercises">Exercises</string>
    <string name="alphabet_learning">Alphabet</string>
    <string name="numbers">Numbers</string>
    <string name="quiz">Quiz</string>
    <string name="the_syllables">The syllables</string>
    <string name="learn_to_write">Learn to write</string>
    <string name="start">Start</string>
    <string name="when_a_vowel_is_combined">"When a vowel is combined with a consonant,
                we get a syllable or “Sigande,” in Pular.
                Let’s start by learning how syllables
                are created.
                After that, complete the missing
...
COMPLETE and learn all adlam syllables</string>
    <string name="wrinting" translatable="false">Wrinting</string>
    <string name="reading">Reading</string>
    <string name="current_consonant">Consonant</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="consonne">Consonne: %1$s</string>
    <string name="the_alphabet">THE ALPHABET</string>
    <string name="trace_and_learn_all_adlam_letters">Trace and learn all adlam letters</string>
    <string name="lower_case">Lower Case</string>
    <string name="upper_case">Upper Case</string>
    <string name="setting">Setting</string>
    <string name="learn_alphabet">Learn Alphabet</string>
    <string name="quiz_instructions_title">Quiz Instructions</string>
    <string name="quiz_instructions_text">You will hear a sound representing an Adlam letter. Select the corresponding letter from the options provided.</string>
    <string name="quiz_title">Quiz - Recognize the Letter</string>
    <string name="quiz_completed">Quiz Completed!</string>
    <string name="final_score">Final Score: %1$d/%2$d</string>
    <string name="replay">Replay</string>
    <string name="return_to_home">Return to Home</string>
...
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="backfffff" translatable="false">Back</string>

    <string name="letter_details">Letter Details</string>
    <string name="examples">Examples</string>
    <string name="numbers_in_adlam">Numbers in Adlam</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="adlam_letter">Adlam Letter</string>
    <string name="brush_settings_title">Brush Settings</string>
    <string name="brush_size">Brush Size: %1$d px</string>
    <string name="brush_color">Brush Color</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
...
    <!-- Production ad unit IDs -->
    <string name="ad_mob_banner_id" translatable="false">ca-app-pub-9267930159061113/5917810504</string>
    <string name="ad_mob_interstitial_id" translatable="false">ca-app-pub-9267930159061113/4193665293</string>


    <string name="privacy_policys">Privacy Policy</string>
    <string name="about">About</string>
    <string name="adlam_by_microsoft">Adlam by Microsoft</string>
    <string name="android_developers_guide">Android Developers Guide</string>
    <string name="contributors">Contributors</string>
    <string name="show_adlam">Show Adlam</string>
    <string name="show_latin">Show Latin</string>
    <string name="hide_guide">Hide guide</string>
    <string name="show_guide">Show guide</string>
    <string name="writing_uppercase">Writing uppercase</string>
    <string name="show_hint">Show hint (Watch ad)</string>
    <string name="watch_ad_for_hint">Watch ad for hint</string>
    <string name="hint_reward_earned">Hint unlocked!</string>
    <string name="play_again">Play again</string>
    <string name="share_app">Share app</string>

    <string name="theme">Theme</string>
    <string name="theme_selection">Theme Selection</string>
    <string name="theme_default">Default</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_green">Green</string>
    <string name="theme_purple">Purple</string>
    <string name="theme_orange">Orange</string>
    <string name="facebook_app_id" translatable="false">1212212121212</string>
...
    <string name="select_theme">Sélectionner un thème</string>
    <string name="select_color_theme">Sélectionner un thème de couleur</string>
    <string name="close">Fermer</string>

    <string name="learn_adlam_script_ease">Learn Adlam Script with Ease</string>
    <string name="learn_adlam_script_ease_short">Learn Adlam Script</string>
    <string name="start_adlam_journey_title">Start Your Adlam Journey</string>
    <string name="start_adlam_journey_description">Master the Adlam script with interactive lessons and practice</string>
    <string name="get_started">Get Started</string>
    <string name="learning_modules">Learning Modules</string>
    <string name="app_logo_description">App Logo</string>
    <string name="featured_image_desc">Featured content image</string>
    <string name="menu_icon_desc">Menu Icon</string>

    <string name="privacy_policy_url">https://adlamfulfulde-8a54a.web.app/privacy/privacy.html</string>
    <string name="share_app_text">Check out this amazing Adlam Fulfulde learning app: https://play.google.com/store/apps/details?id=%1s</string>
    <string name="version">Version %1s</string>
    <string name="rate_app">Rate this App</string>
    <string name="more_options">More options</string>
...
    <string name="export_progress_desc">Save and share your learning data.</string>

    <string name="adlam_transcription">Adlam Latin Transcription</string>
    <string name="adlam_transcription_subtitle">Transcribe Adlam to Latin script</string>

    <!-- Alphabet Learning Quiz -->
    <string name="alphabet_quiz_title">Alphabet Quiz</string>
    <string name="alphabet_quiz_subtitle">Learn each letter step by step</string>
    <string name="visual_recognition_phase">Visual Recognition</string>
    <string name="audio_recognition_phase">Audio Recognition</string>
    <string name="question_prompt">What is the name of this letter?</string>
    <string name="audio_question_prompt">Listen to the sound and choose the corresponding letter</string>
    <string name="mastery_required">Master this letter to continue</string>
    <string name="letter_mastered">Letter Mastered!</string>
    <string name="phase_mastered">Phase Mastered!</string>
    <string name="next_letter">Next Letter</string>
    <string name="next_phase">Next Phase</string>
    <string name="play_audio">Play Audio</string>
    <string name="audio_played">Audio Played</string>
    <string name="alphabet_complete">Alphabet Complete!</string>
    <string name="congratulations_reader">Congratulations! You can now read Adlam!</string>

    <!-- Adlam Letters -->
    <string name="letter_alif">Alif</string>
    <string name="letter_alif_desc">The first letter of Adlam, represents the sound [a]</string>
    <string name="letter_daali">Daali</string>
    <string name="letter_daali_desc">Represents the sound [d]</string>
...
